--- a/FocusFinderApp/Views/Home/Location.cshtml
+++ b/FocusFinderApp/Views/Home/Location.cshtml
@@ -8,20 +8,24 @@
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 </head>
 
+<div class="i-container">
 <div class="i-body-top body-top">
     <div class="text-center">
         <h1 class="display-4">@Model.LocationName</h1>
     </div>
 </div>
+</div>
 
 <!-- Main Location Container -->
-<div>
+<div class="i-container">
 
     <!-- Average Overall Rating -->
+    <div>
     <h4>Reviews - Overall @ViewBag.AverageRating ⭐</h4>
+    </div>
 
     <!-- Bio -->
-    <div> 
+    <div>
         <h5>About @Model.LocationName</h5>
         <p>@Model.Description</p>
     </div>
@@ -52,7 +56,7 @@
                 </form>
             }
         }
-        <!-- Bookmark Button -->
+
         <div class="i-bookmark-container mt-2">
             @if (ViewBag.IsLoggedIn)
                 {
@@ -81,11 +85,10 @@
                 }
         </div>
 
-            <!-- Brief Review(1-5*) -->
+
             <div>
                  <h5>Visited already? Leave a review!</h5>
 
-                <!-- Add Review Form -->
                 @{
                     if (ViewBag.IsLoggedIn == null || ViewBag.IsLoggedIn == false)
                     {
@@ -104,7 +107,7 @@
                             </select>
                             <button type="submit">Submit Review</button>
                         </form>
-                    <!-- Extended Review Button -->
+
                         <form method="get" asp-controller="Review" asp-action="NewReviewForm">
                             <input type="hidden" name="locationId" value="@Model.Id">
                             <button type="submit" class="btn btn-primary">Full Review Form</button>
@@ -116,7 +119,7 @@
 
 
     <!-- Image -->
-    <div class="i-study-pic-container glow-back">
+    <div class="i-location-container i-study-pic-container padded">
         @{
             var ifImage = "/images/noimagefound.jpg";
             if (@Model.ImageURL != null){
