fix weird missing files

--- a/FocusFinderApp/Views/Users/Edit.cshtml
+++ b/FocusFinderApp/Views/Users/Edit.cshtml
@@ -1,4 +1,9 @@
 @model FocusFinderApp.Models.UserEditModelView
+
+
+@{
+    ViewData["Title"] = "Edit Profile";
+}
 <div class="i-container">
 <form action="/Profile/Edit" method="post" enctype="multipart/form-data">
     <div>
