--- a/FocusFinderApp/Views/Session/Login.cshtml
+++ b/FocusFinderApp/Views/Session/Login.cshtml
@@ -1,9 +1,18 @@
+<link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
+
 <div class="i-container">
     <div class="i-location-container i-study-pic-container padded">
         <form class="login-form" action="/Login" method="post">
             <div class="form-group">
                 <input type="text" name="email" id="email" class="search-input small-in" placeholder="Email" />
             </div>
+              @if (TempData["Error"] != null || TempData["ErrorMessage"] != null)
+            {
+                <div class="error-message-login">
+                    @TempData["Error"]
+                    @TempData["ErrorMessage"]
+                </div>
+            }
             <div class="form-group">
                 <input type="password" name="password" id="password" class="search-input small-in" placeholder="password" />
             </div>
